# python-template

./: pyproject.toml
.github/workflows/: code-quality.yml
