[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Sample description"
authors = ["Dan Radenkovic <dan@radenkovic.org>"]
readme = "README.md"
# packages = [{include = "python_template"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.2"
black = "^24.4.2"
flake8 = "^7.0.0"
pytest = "^8.2.0"

[tool.poetry.group.jupyter]
optional = true
[tool.poetry.group.jupyter.dependencies]
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
